--- a/agencia-cli/src/main/resources/application.properties
+++ b/agencia-cli/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 quarkus.http.port=8081
+
+com.mhmatsumura.cliente.ClienteService/mp-rest/connectTimeout: 3000
+com.mhmatsumura.cliente.ClienteService/mp-rest/readTimeout: 3000
